k8s/manifests-79c33a/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-79c33a
  namespace: journee
  labels:
    app: journee-79c33a
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-79c33a
  template:
    metadata:
      labels:
        app: journee-79c33a
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-79c33a
          image: gcr.io/my-docker-471807/journee:79c33a-dbe905
          ports:
            - containerPort: 3000
