k8s/manifests-79c33a/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-79c33a
  namespace: journee
spec:
  selector:
    app: journee-79c33a
  ports:
    - port: 80
      targetPort: 3000
